grammar.js
    source_file: ($) => repeat($._structure_item),

    _structure_item: ($) =>
      choice(
        prec(PREC.TOP_LEVEL_EXPRESSION, $.expression),
        prec(PREC.MODULE_DECLARATION, $._module)
      ),

    ////////////////////////////////////////////////////////////////////////////
    //
    // Modules
    //
    ////////////////////////////////////////////////////////////////////////////

    record_declaration: ($) =>
      seq(
        DASH,
        "record",
        parens(seq(field("name", $.atom), COMMA, $._record_declaration_fields)),
        DOT
      ),

    _record_declaration_fields: ($) => tuple($.expr_record_definition),

    expr_record_definition: ($) =>
      seq(
        $.atom,
        opt(seq(EQUAL, field("default", $.expression))),
        opt(seq(DOUBLE_COLON, field("type", $.type_expression)))
      ),

    module_attribute: ($) =>
      prec(
        PREC.MODULE_DECLARATION,
        seq(DASH, $.atom, parens($.expression), DOT)
      ),

    module_name: ($) => seq(DASH, "module", parens($.atom), DOT),

    module_export: ($) =>
      seq(
        DASH,
        choice("export", "export_type"),
        parens(list(seq($.atom, SLASH, $.integer))),
        DOT
      ),

    function_declaration: ($) => seq(sepBy(SEMI, $.function_clause), DOT),

    function_clause: ($) =>
      prec(PREC.FUNCTION_CLAUSE, seq(field("name", $.atom), $.lambda_clause)),

    macro_declaration: ($) =>
      prec(
        PREC.MACRO_DECLARATION,
        seq(
          DASH,
          "define",
          parens(
            seq(
              field("name", choice($.atom, $.variable)),
              opt(field("arguments", args($.pattern))),
              COMMA,
              field("value", $.expression)
            )
          ),
          DOT
        )
      ),

    function_spec: ($) =>
      seq(
        DASH,
        choice("spec", "callback"),
        field("name", $.atom),
        sepBy(
          SEMI,
          seq(
            args($.type_expression),
            ARROW,
            field("def", $.type_expression),
            opt($.spec_when_clause)
          )
        ),
        DOT
      ),

    spec_when_clause: ($) => seq("when", sepBy(COMMA, $.type_binding)),

    type_binding: ($) => seq($.variable, DOUBLE_COLON, $.type_expression),

    type_expression: ($) =>
      sepBy(
        PIPE,
        choice(
          $.type_atom,
          $.type_application,
          $.type_bitstring,
          $.type_fun,
          $.type_integer,
          $.type_map,
          $.type_record,
          $.type_tuple,
          $.type_variable,
          $._type_list
        )
      ),

    type_variable: ($) => $.variable,

    type_application: ($) =>
      prec.right(
        PREC.MACRO_APPLICATION,
        seq(opt(seq($.atom, COLON)), $.atom, args($.type_expression))
      ),

    type_fun: ($) =>
      seq(
        "fun",
        parens(
          opt(
            choice(
              seq(parens(DOT_DOT_DOT), ARROW, $.type_expression),
              seq(args($.type_expression), ARROW, $.type_expression)
            )
          )
        )
      ),
    _type_list: ($) => choice($.type_list, $.type_nonempty_list),

    type_list: ($) => delim(BRACKET_LEFT, $.type_expression, BRACKET_RIGHT),

    type_record: ($) =>
      seq(
        HASH,
        $.atom,
        BRACE_LEFT,
        opt(sepBy(COMMA, $.type_record_field)),
        BRACE_RIGHT
      ),
    pattern: ($) =>
      prec(
        PREC.PATTERN,
        sepBy(EQUAL, choice($.term, $.variable, $.pat_list, $.pat_tuple))
      ),

    expr_map_update: ($) =>
      prec.left(PREC.EXPR_MAP_UPDATE, seq($.expression, $.map)),

    expr_bitstring_comprehension: ($) =>
      seq(
        BINARY_LEFT,
        $.term,
        DOUBLE_PIPE,
        $.expr_bitstring_generator,
        opt(seq(COMMA, $.expr_bitstring_filter)),
        BINARY_RIGHT
      ),

    expr_bitstring_generator: ($) =>
      seq(BINARY_LEFT, $.expression, BINARY_RIGHT, REV_FAT_ARROW, $.expression),
    expr_bitstring_filter: ($) => sepBy(COMMA, $.expression),

    expr_op: ($) => choice($._expr_operator_unary, $._expr_operator_binary),

    _expr_operator_unary: ($) =>
      prec.right(
        PREC.UNARY_OP,
        seq(field("operator", oneOf(OP1)), field("operand", $.expression))
      ),

    _expr_operator_binary: ($) =>
      choice(
        prec.left(
          PREC.BINARY_OP,
          seq(
            field("lhs", $.expression),
            field("operator", oneOf(OP2_LEFT_ASSOC)),
            field("rhs", $.expression)
          )
        ),
        prec.right(
          PREC.BINARY_OP,
          seq(
            field("lhs", $.expression),
            field("operator", oneOf(OP2_RIGHT_ASSOC)),
            field("rhs", $.expression)
          )
        )
      ),

    expr_list: ($) =>
      prec(PREC.EXPR_LIST_CONS, choice(list($.expression), $.expr_list_cons)),

    expr_match: ($) =>
      prec.right(PREC.MATCH, seq($.expression, EQUAL, $.expression)),

    expr_lambda: ($) => seq("fun", sepBy(SEMI, $.lambda_clause), "end"),

    lambda_clause: ($) =>
      seq(
        field("arguments", args($.pattern)),
        opt($.guard_clause),
        ARROW,
        field("body", sepBy(COMMA, $.expression))
      ),

    expr_function_capture: ($) =>
      seq("fun", $._exact_function_name, SLASH, field("arity", $.integer)),

    expr_function_call: ($) =>
      seq(field("name", $._function_name), args($.expression)),

    _function_name: ($) =>
      prec(
        PREC.FUNCTION_NAME,
        choice($.computed_function_name, $.qualified_function_name)
      ),

    _exact_function_name: ($) =>
      prec(
        PREC.FUNCTION_NAME,
        choice(
          alias($._exact_qualified_function_name, $.qualified_function_name),
          alias($.atom, $.computed_function_name)
        )
      ),

    qualified_function_name: ($) =>
      seq(
        field("module_name", choice($.variable, $.atom, parens($.expression))),
        COLON,
        field("function_name", choice($.variable, $.atom, parens($.expression)))
      ),

    computed_function_name: ($) =>
      prec(
        PREC.FUNCTION_NAME,
        choice($.variable, $.atom, parens($.expression))
      ),

    expr_macro_application: ($) =>
      prec.right(
        PREC.MACRO_APPLICATION,
        seq(QUESTION, $._macro_name, opt(args($.expression)))
      ),

    _macro_name: ($) => choice($.variable, $.atom),

    variable: ($) =>
      /[_A-Z\xC0-\xD6\xD8-\xDE][_@a-zA-Z0-9\xC0-\xD6\xD8-\xDE\xDF-\xF6\xF8-\xFF]*/,

    tuple: ($) => tuple($.expression),

    atom: ($) => field("value", choice($._unquoted_atom, $._quoted_atom)),
    _unquoted_atom: ($) =>
      /[a-z\xDF-\xF6\xF8-\xFF][_@a-zA-Z0-9\xC0-\xD6\xD8-\xDE\xDF-\xF6\xF8-\xFF]*/,
    _quoted_atom: ($) => seq("'", repeat(choice(/[^'\\]+/, $._escape)), "'"),

    integer: ($) =>
      choice(
        // binary syntax
        /-?2#[01_]+/,
        // hex syntax
        /-?16#[a-fA-F0-9_]+/,
        // regular "other base" syntax
        /-?([\d*_]*#)?[\d_]+/
      ),
    string: ($) =>
      prec.right(repeat1(seq('"', repeat(choice(/[^"\\]+/, $._escape)), '"'))),

    char: ($) => seq("$", choice(/[^\\]/, $._escape)),

    _escape: ($) =>
      token(
        seq(
          "\\",
          choice(
            /[0-7]{1,3}/,
            /x[0-9a-fA-F]{2}/,
            /x{[0-9a-fA-F]+}/,
            "\n",
            /[nrtvbfesd"]/
          )
        )
      ),

    binary_string: ($) =>
      seq(BINARY_LEFT, opt(sepBy(COMMA, $.bin_part)), BINARY_RIGHT),
    bin_part: ($) =>
      choice(
        seq(
          choice($.integer, $.float, $.string, $.char, $.variable),
          opt($.bin_sized),
          opt($.bin_type_list)
        ),
        seq(parens($.expression), opt($.bin_sized), opt($.bin_type_list))
      ),
    bin_sized: ($) => seq(/:/, $.integer),
    bin_type_list: ($) => seq(/\//, sepBy(DASH, $.bin_type)),
    bin_type: ($) =>
      choice(
        "big",
        "binary",
        "bits",
        "bitstring",
        "bytes",
        "float",
        "integer",
        "little",
        "native",
        "signed",
        "unsigned",
        "utf16",
        "utf32",
        "utf8"
      ),

    map: ($) =>
      seq(HASH, BRACE_LEFT, opt(sepBy(COMMA, $.map_entry)), BRACE_RIGHT),
    map_entry: ($) =>
      seq(
        choice($.term, $.variable),
        choice(FAT_ARROW, COLON_EQUAL),
        $.expression
      ),

    record: ($) =>
      seq(
        HASH,
        $.atom,
        BRACE_LEFT,
        opt(sepBy(COMMA, $.record_field)),
        BRACE_RIGHT
      ),
