test/corpus/expr_bit_string.txt
================================================================================
comprehensions
================================================================================

<< << (X*2) >> || <<X>> <= << 1,2,3 >>, is_integer(X) >>

--------------------------------------------------------------------------------

(source_file
  (expr_bitstring_comprehension
    (binary_string
      (bin_part
        (expr_op
          (variable)
          (integer))))
    (expr_bitstring_generator
      (variable)
      (binary_string
        (bin_part
          (integer))
        (bin_part
          (integer))
        (bin_part
          (integer))))
    (expr_bitstring_filter
      (expr_function_call
        (computed_function_name
          (atom))
        (variable)))))

================================================================================
function that matches with a bitstring
================================================================================

parse_date(
    <<Year:4/bytes, $-, Month:2/bytes, $-, Day:2/bytes, _Rest/binary>>) ->
    {Year, Month, Day}.
trim_dash("-" ++ Rest) -> Rest.

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (function_clause
      (atom)
      (lambda_clause
        (pattern
          (binary_string
            (bin_part
              (variable)
              (bin_sized
                (integer))
              (bin_type_list
                (bin_type)))
            (bin_part
              (char))
            (bin_part
              (variable)
              (bin_sized
                (integer))
              (bin_type_list
                (bin_type)))
            (bin_part
              (char))
            (bin_part
              (variable)
              (bin_sized
                (integer))
              (bin_type_list
                (bin_type)))
            (bin_part
              (variable)
              (bin_type_list
                (bin_type)))))
        (tuple
          (variable)
          (variable)
          (variable)))))
  (function_declaration
    (function_clause
      (atom)
      (lambda_clause
        (pattern
          (string)
          (variable))
        (variable)))))
