test/corpus/expr_function.txt
================================================================================
captured functions
================================================================================

fun foo:bar/1
fun N/1
fun M:F/A
fun ?MODULE:F/A

--------------------------------------------------------------------------------

(source_file
  (expr_function_capture
    (qualified_function_name
      (atom)
      (atom))
    (integer))
  (expr_function_capture
    (computed_function_name)
    (integer))
  (expr_function_capture
    (qualified_function_name
      (variable)
      (variable))
    (variable))
  (expr_function_capture
    (qualified_function_name
      (expr_macro_application
        (variable))
      (variable))
    (variable)))

================================================================================
recursive anonymous function
================================================================================

Foo = fun F(X) -> F(X) end

--------------------------------------------------------------------------------

(source_file
  (expr_match
    (variable)
    (expr_lambda
      (lambda_clause
        (variable)
        (pattern
          (variable))
        (expr_function_call
          (computed_function_name
            (variable))
          (variable))))))
