test/corpus/expr_map.txt
================================================================================
updates
================================================================================

M#{ 1 => V }
(f())#{ k := V }
Checksums1 = Checksums#{Module => Checksum}
Checksums2 = Checksums1#{?MODULE => Checksum}

--------------------------------------------------------------------------------

(source_file
  (expr_map_update
    (variable)
    (map
      (map_entry
        (integer)
        (variable))))
  (expr_map_update
    (expr_function_call
      (computed_function_name
        (atom)))
    (map
      (map_entry
        (atom)
        (variable))))
  (expr_match
    (variable)
    (expr_map_update
      (variable)
      (map
        (map_entry
          (variable)
          (variable)))))
  (expr_match
    (variable)
    (expr_map_update
      (variable)
      (map
        (map_entry
          (expr_macro_application
            (variable))
          (variable))))))
