test/corpus/macros.txt
================================================================================
macro usage
================================================================================

?MY_MACRO

--------------------------------------------------------------------------------

(source_file
  (expr_macro_application
    (variable)))

================================================================================
macro application
================================================================================

?MY_MACRO(2)
?MY_MACRO(2, [1])
?MY_MACRO(2, [1], ?MY_MACRO_EXTRA)

--------------------------------------------------------------------------------

(source_file
  (expr_macro_application
    (variable)
    (integer))
  (expr_macro_application
    (variable)
    (integer)
    (expr_list
      (integer)))
  (expr_macro_application
    (variable)
    (integer)
    (expr_list
      (integer))
    (expr_macro_application
      (variable))))

================================================================================
macros in patterns
================================================================================

is_test(?TEST) -> true.

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (function_clause
      (atom)
      (lambda_clause
        (pattern
          (expr_macro_application
            (variable)))
        (atom)))))

================================================================================
macro definition
================================================================================

-define(ASM_CACHE_KEY(Module, Checksum),
        {?MODULE, asm_cache, Module, Checksum}).
-define(Const, Replacement).
-define(MACRO1(X, Y), {a, X, b, Y}).
-define(assertStandaloneFun(Expression),
        ?assertMatch(#standalone_fun{}, ?make_standalone_fun(Expression))).

--------------------------------------------------------------------------------

(source_file
  (macro_declaration
    (variable)
    (pattern
      (variable))
    (pattern
      (variable))
    (tuple
      (expr_macro_application
        (variable))
      (atom)
      (variable)
      (variable)))
  (macro_declaration
    (variable)
    (variable))
  (macro_declaration
    (variable)
    (pattern
      (variable))
    (pattern
      (variable))
    (tuple
      (atom)
      (variable)
      (atom)
      (variable)))
  (macro_declaration
    (atom)
    (pattern
      (variable))
    (expr_macro_application
      (atom)
      (record
        (atom))
      (expr_macro_application
        (atom)
        (variable)))))

================================================================================
ifdef/endif
================================================================================

-ifdef(TEST).
-export([test_case/0]).
-endif.

--------------------------------------------------------------------------------

(source_file
  (module_attribute
    (atom)
    (variable))
  (module_export
    (atom)
    (integer))
  (module_attribute
    (atom)))
