test/corpus/module_attribute.txt
================================================================================
name attribute
================================================================================

-module(name).

--------------------------------------------------------------------------------

(source_file
  (module_name
    (atom)))

================================================================================
export attribute
================================================================================

-export([hello/0, what/1]).
-export_type([t/0, t_aux/1]).

--------------------------------------------------------------------------------

(source_file
  (module_export
    (atom)
    (integer)
    (atom)
    (integer))
  (module_export
    (atom)
    (integer)
    (atom)
    (integer)))

================================================================================
import attribute
================================================================================

-import(lists, [map/2,member/2,keymember/3,duplicate/2,splitwith/2]).

--------------------------------------------------------------------------------

(source_file
  (module_import
    (atom)
    (atom)
    (integer)
    (atom)
    (integer)
    (atom)
    (integer)
    (atom)
    (integer)
    (atom)
    (integer)))

================================================================================
dialyzer attribute
================================================================================

-dialyzer([{noreturn, [hello/0, what/1]}]).

--------------------------------------------------------------------------------

(source_file
  (module_attribute
    (atom)
    (expr_list
      (tuple
        (atom)
        (expr_list
          (expr_op
            (atom)
            (integer))
          (expr_op
            (atom)
            (integer)))))))

================================================================================
record creation
================================================================================

-record(beam_file, {module               :: module(),
                    labeled_exports = [] :: [beam_lib:labeled_entry()],
                    attributes      = [] :: [beam_lib:attrib_entry()],
                    compile_info    = [] :: [beam_lib:compinfo_entry()],
                    code            = [] :: [#function{}]}).

--------------------------------------------------------------------------------

(source_file
  (record_declaration
    (atom)
    (expr_record_definition
      (atom)
      (type_expression
        (type_application
          (atom))))
    (expr_record_definition
      (atom)
      (expr_list)
      (type_expression
        (type_list
          (type_expression
            (type_application
              (atom)
              (atom))))))
    (expr_record_definition
      (atom)
      (expr_list)
      (type_expression
        (type_list
          (type_expression
            (type_application
              (atom)
              (atom))))))
    (expr_record_definition
      (atom)
      (expr_list)
      (type_expression
        (type_list
          (type_expression
            (type_application
              (atom)
              (atom))))))
    (expr_record_definition
      (atom)
      (expr_list)
      (type_expression
        (type_list
          (type_expression
            (type_record
              (atom))))))))

================================================================================
spec with multi-clause 'when'
================================================================================

-spec to_standalone_fun(Fun, Options) -> StandaloneFun when
      Fun :: fun(),
      Options :: options(),
      StandaloneFun :: standalone_fun().

--------------------------------------------------------------------------------

(source_file
  (function_spec
    (atom)
    (type_expression
      (type_variable
        (variable)))
    (type_expression
      (type_variable
        (variable)))
    (type_expression
      (type_variable
        (variable)))
    (spec_when_clause
      (type_binding
        (variable)
        (type_expression
          (type_fun)))
      (type_binding
        (variable)
        (type_expression
          (type_application
            (atom))))
      (type_binding
        (variable)
        (type_expression
          (type_application
            (atom)))))))

================================================================================
multi-clause spec
================================================================================

-spec get
(StoreId, PathPattern) -> Result when
      StoreId :: store_id(),
      PathPattern :: khepri_path:pattern() | string(),
      Result :: khepri_machine:result();
(PathPattern, Options) -> Result when
      PathPattern :: khepri_path:pattern() | string(),
      Options :: khepri_machine:operation_options(),
      Result :: khepri_machine:result().

--------------------------------------------------------------------------------

(source_file
  (function_spec
    (atom)
    (type_expression
      (type_variable
        (variable)))
    (type_expression
      (type_variable
        (variable)))
    (type_expression
      (type_variable
        (variable)))
    (spec_when_clause
      (type_binding
        (variable)
        (type_expression
          (type_application
            (atom))))
      (type_binding
        (variable)
        (type_expression
          (type_application
            (atom)
            (atom))
          (type_application
            (atom))))
      (type_binding
        (variable)
        (type_expression
          (type_application
            (atom)
            (atom)))))
    (type_expression
      (type_variable
        (variable)))
    (type_expression
      (type_variable
        (variable)))
    (type_expression
      (type_variable
        (variable)))
    (spec_when_clause
      (type_binding
        (variable)
        (type_expression
          (type_application
            (atom)
            (atom))
          (type_application
            (atom))))
      (type_binding
        (variable)
        (type_expression
          (type_application
            (atom)
            (atom))))
      (type_binding
        (variable)
        (type_expression
          (type_application
            (atom)
            (atom)))))))

================================================================================
if on a macro value
================================================================================

-if(?DEBUG).

--------------------------------------------------------------------------------

(source_file
  (module_attribute
    (expr_macro_application
      (variable))))
